@@ -19,7 +19,6 @@ import java.time.OffsetDateTime;
 import java.util.Collections;
 import java.util.Date;
 import java.util.List;
-import java.util.Objects;
 
 public class StartJobExecution extends WakerBehaviour {
 
@@ -92,13 +91,11 @@ public class StartJobExecution extends WakerBehaviour {
 				logger.info("[{}] Start executing the job for {} without informing CNA", myAgent.getName(),
 						jobToExecute.getClientIdentifier());
 			}
-			if (myServerAgent.getServerJobs().get(jobToExecute).equals(JobStatusEnum.ACCEPTED)) {
-				myServerAgent.getServerJobs().replace(jobToExecute, JobStatusEnum.IN_PROGRESS);
-			}
-			final List<AID> receivers = informCNAStart ?
-					List.of(myServerAgent.getGreenSourceForJobMap().get(jobToExecute.getJobId()),
-							myServerAgent.getOwnerCloudNetworkAgent()) :
-					Collections.singletonList(myServerAgent.getGreenSourceForJobMap().get(jobToExecute.getJobId()));
+			myServerAgent.getServerJobs().replace(jobToExecute, JobStatusEnum.ACCEPTED, JobStatusEnum.IN_PROGRESS);
+			final List<AID> receivers = informCNAStart
+					? List.of(myServerAgent.getGreenSourceForJobMap().get(jobToExecute.getJobId()),
+					myServerAgent.getOwnerCloudNetworkAgent())
+					: Collections.singletonList(myServerAgent.getGreenSourceForJobMap().get(jobToExecute.getJobId()));
 			final ACLMessage startedJobMessage = prepareJobStartedMessage(jobToExecute.getJobId(),
 					jobToExecute.getStartTime(), receivers);
 			displayMessageArrow(myServerAgent, receivers);
