@@ -3,8 +3,12 @@ package agents.server.domain;
 import static common.GUIUtils.displayMessageArrow;
 import static common.TimeUtils.getCurrentTime;
 import static common.TimeUtils.isWithinTimeStamp;
-import static domain.job.JobStatusEnum.JOB_IN_PROGRESS;
-import static domain.job.JobStatusEnum.JOB_ON_BACK_UP;
+import static domain.job.JobStatusEnum.ACCEPTED_JOB_STATUSES;
+import static domain.job.JobStatusEnum.GREEN_POWER_SERVER_JOB_STATUSES;
+import static domain.job.JobStatusEnum.IN_PROGRESS;
+import static domain.job.JobStatusEnum.IN_PROGRESS_BACKUP_ENERGY;
+import static domain.job.JobStatusEnum.JOB_ON_HOLD;
+import static domain.job.JobStatusEnum.ON_HOLD_SOURCE_SHORTAGE;
 import static java.time.temporal.ChronoUnit.HOURS;
 import static messages.domain.JobStatusMessageFactory.prepareFinishMessage;
 
@@ -15,6 +19,7 @@ import agents.server.behaviour.StartJobExecution;
 import com.gui.domain.nodes.ServerAgentNode;
 
 import common.TimeUtils;
+import common.mapper.JobMapper;
 import domain.GreenSourceData;
 import domain.job.ImmutableJob;
 import domain.job.Job;
@@ -62,9 +67,50 @@ public class ServerStateManagement {
 	 * @param endDate   end date
 	 * @return available power
 	 */
-	public int getAvailableCapacity(final OffsetDateTime startDate, final OffsetDateTime endDate) {
-		final int powerInUser = getUniqueJobsForTimeStamp(startDate, endDate).stream().mapToInt(Job::getPower).sum();
-		return serverAgent.getCurrentMaximumCapacity() - powerInUser;
+	public synchronized int getAvailableCapacity(final OffsetDateTime startDate, final OffsetDateTime endDate) {
+		var usedPower = serverAgent.getServerJobs().keySet().stream()
+				.filter(job -> TimeUtils.isWithinTimeStampWithBuffer(job.getStartTime(), job.getEndTime(), startDate)
+						|| TimeUtils.isWithinTimeStampWithBuffer(job.getStartTime(), job.getEndTime(), endDate))
+				.map(Job::getPower).mapToInt(Integer::intValue).sum();
+		return serverAgent.getCurrentMaximumCapacity() - usedPower;
+	}
+
+	/**
+	 * Method computes the available back-up power for given time frame and active jobs
+	 *
+	 * @param startDate    starting date
+	 * @param endDate      end date
+	 * @param jobToExclude job to exclude from set
+	 * @return available power
+	 */
+	public synchronized int getBackUpAvailableCapacity(final OffsetDateTime startDate, final OffsetDateTime endDate,
+			final JobInstanceIdentifier jobToExclude) {
+		var usedPower = serverAgent.getServerJobs().keySet().stream()
+				.filter(job -> TimeUtils.isWithinTimeStampWithBuffer(job.getStartTime(), job.getEndTime(), startDate)
+						|| TimeUtils.isWithinTimeStampWithBuffer(job.getStartTime(), job.getEndTime(), endDate)
+						&& serverAgent.getServerJobs().get(job).equals(IN_PROGRESS_BACKUP_ENERGY)
+						&& !JobMapper.mapToJobInstanceId(job).equals(jobToExclude)).map(Job::getPower)
+				.mapToInt(Integer::intValue).sum();
+		return serverAgent.getInitialMaximumCapacity() - usedPower;
+	}
+
+	/**
+	 * Method computes the available power for given time frame and active jobs
+	 *
+	 * @param startDate    starting date
+	 * @param endDate      end date
+	 * @param jobToExclude job to exclude from set
+	 * @return available power
+	 */
+	public synchronized int getAvailableCapacity(final OffsetDateTime startDate, final OffsetDateTime endDate,
+			final JobInstanceIdentifier jobToExclude) {
+		var usedPower = serverAgent.getServerJobs().keySet().stream()
+				.filter(job -> TimeUtils.isWithinTimeStampWithBuffer(job.getStartTime(), job.getEndTime(), startDate)
+						|| TimeUtils.isWithinTimeStampWithBuffer(job.getStartTime(), job.getEndTime(), endDate)
+						&& GREEN_POWER_SERVER_JOB_STATUSES.contains(serverAgent.getServerJobs().get(job))
+						&& !JobMapper.mapToJobInstanceId(job).equals(jobToExclude)).map(Job::getPower)
+				.mapToInt(Integer::intValue).sum();
+		return serverAgent.getCurrentMaximumCapacity() - usedPower;
 	}
 
 	/**
@@ -74,18 +120,30 @@ public class ServerStateManagement {
 	 * @param informCNA   flag indicating whether cloud network should be informed about the job finish
 	 */
 	public void finishJobExecution(final Job jobToFinish, final boolean informCNA) {
-		final List<AID> receivers =
-				informCNA
-						? List.of(
-						serverAgent.getGreenSourceForJobMap().get(jobToFinish.getJobId()),
-						serverAgent.getOwnerCloudNetworkAgent())
-						: Collections.singletonList(
-						serverAgent.getGreenSourceForJobMap().get(jobToFinish.getJobId()));
-		final ACLMessage finishJobMessage =
-				prepareFinishMessage(jobToFinish.getJobId(), jobToFinish.getStartTime(), receivers);
+		final JobStatusEnum jobStatusEnum = serverAgent.getServerJobs().get(jobToFinish);
+		final List<AID> receivers = informCNA ?
+				List.of(serverAgent.getGreenSourceForJobMap().get(jobToFinish.getJobId()),
+						serverAgent.getOwnerCloudNetworkAgent()) :
+				Collections.singletonList(serverAgent.getGreenSourceForJobMap().get(jobToFinish.getJobId()));
+		final ACLMessage finishJobMessage = prepareFinishMessage(jobToFinish.getJobId(), jobToFinish.getStartTime(),
+				receivers);
 		serverAgent.getServerJobs().remove(jobToFinish);
 		if (Objects.isNull(serverAgent.manage().getJobById(jobToFinish.getJobId()))) {
 			serverAgent.getGreenSourceForJobMap().remove(jobToFinish.getJobId());
+		}
+		if (jobStatusEnum.equals(IN_PROGRESS_BACKUP_ENERGY)) {
+			serverAgent.getServerJobs().entrySet().stream().filter(job ->
+					isWithinTimeStamp(job.getKey().getStartTime(), job.getKey().getEndTime(), getCurrentTime())
+							&& job.getValue().equals(ON_HOLD_SOURCE_SHORTAGE)
+							&& job.getKey().getPower() <= jobToFinish.getPower()).forEach(job -> {
+				if (getBackUpAvailableCapacity(job.getKey().getStartTime(), job.getKey().getEndTime(),
+						JobMapper.mapToJobInstanceId(job.getKey())) >= job.getKey().getPower()) {
+					logger.info("[{}] Supplying job {} with back up power", serverAgent.getName(),
+							job.getKey().getJobId());
+					job.setValue(IN_PROGRESS_BACKUP_ENERGY);
+					updateServerGUI();
+				}
+			});
 		}
 		incrementFinishedJobs(jobToFinish.getJobId());
 		displayMessageArrow(serverAgent, receivers);
@@ -101,8 +159,7 @@ public class ServerStateManagement {
 	public double calculateServicePrice(final GreenSourceData greenSourceData) {
 		var job = getJobById(greenSourceData.getJobId());
 		var powerCost = job.getPower() * greenSourceData.getPricePerPowerUnit();
-		var computingCost =
-				HOURS.between(job.getEndTime(), job.getStartTime()) * serverAgent.getPricePerHour();
+		var computingCost = HOURS.between(job.getEndTime(), job.getStartTime()) * serverAgent.getPricePerHour();
 		return powerCost + computingCost;
 	}
 
@@ -114,17 +171,12 @@ public class ServerStateManagement {
 	 */
 	public Map.Entry<Job, JobStatusEnum> getCurrentJobInstance(final String jobId) {
 		final OffsetDateTime currentTime = getCurrentTime();
-		return serverAgent.getServerJobs().entrySet().stream()
-				.filter(
-						jobEntry -> {
-							final Job job = jobEntry.getKey();
-							return job.getJobId().equals(jobId)
-									&& ((job.getStartTime().isBefore(currentTime)
-									&& job.getEndTime().isAfter(currentTime))
-									|| job.getEndTime().equals(currentTime));
-						})
-				.findFirst()
-				.orElse(null);
+		return serverAgent.getServerJobs().entrySet().stream().filter(jobEntry -> {
+			final Job job = jobEntry.getKey();
+			return job.getJobId().equals(jobId) && (
+					(job.getStartTime().isBefore(currentTime) && job.getEndTime().isAfter(currentTime))
+							|| job.getEndTime().equals(currentTime));
+		}).findFirst().orElse(null);
 	}
 
 	/**
@@ -136,8 +188,7 @@ public class ServerStateManagement {
 	 */
 	public Job getJobByIdAndStartDate(final String jobId, final OffsetDateTime startTime) {
 		return serverAgent.getServerJobs().keySet().stream()
-				.filter(job -> job.getJobId().equals(jobId) && job.getStartTime().isEqual(startTime))
-				.findFirst()
+				.filter(job -> job.getJobId().equals(jobId) && job.getStartTime().isEqual(startTime)).findFirst()
 				.orElse(null);
 	}
 
@@ -149,12 +200,8 @@ public class ServerStateManagement {
 	 */
 	public Job getJobByIdAndStartDate(final JobInstanceIdentifier jobInstanceId) {
 		return serverAgent.getServerJobs().keySet().stream()
-				.filter(
-						job ->
-								job.getJobId().equals(jobInstanceId.getJobId())
-										&& job.getStartTime().isEqual(jobInstanceId.getStartTime()))
-				.findFirst()
-				.orElse(null);
+				.filter(job -> job.getJobId().equals(jobInstanceId.getJobId()) && job.getStartTime()
+						.isEqual(jobInstanceId.getStartTime())).findFirst().orElse(null);
 	}
 
 	/**
@@ -166,8 +213,7 @@ public class ServerStateManagement {
 	 */
 	public Job getJobByIdAndEndDate(final String jobId, final OffsetDateTime endTime) {
 		return serverAgent.getServerJobs().keySet().stream()
-				.filter(job -> job.getJobId().equals(jobId) && job.getEndTime().isEqual(endTime))
-				.findFirst()
+				.filter(job -> job.getJobId().equals(jobId) && job.getEndTime().isEqual(endTime)).findFirst()
 				.orElse(null);
 	}
 
@@ -178,9 +224,7 @@ public class ServerStateManagement {
 	 * @return Job
 	 */
 	public Job getJobById(final String jobId) {
-		return serverAgent.getServerJobs().keySet().stream()
-				.filter(job -> job.getJobId().equals(jobId))
-				.findFirst()
+		return serverAgent.getServerJobs().keySet().stream().filter(job -> job.getJobId().equals(jobId)).findFirst()
 				.orElse(null);
 	}
 
@@ -191,10 +235,7 @@ public class ServerStateManagement {
 	 * @return boolean
 	 */
 	public boolean isJobUnique(final String jobId) {
-		return serverAgent.getServerJobs().keySet().stream()
-				.filter(job -> job.getJobId().equals(jobId))
-				.toList()
-				.size()
+		return serverAgent.getServerJobs().keySet().stream().filter(job -> job.getJobId().equals(jobId)).toList().size()
 				== 1;
 	}
 
@@ -206,18 +247,12 @@ public class ServerStateManagement {
 	public void incrementStartedJobs(final String jobId) {
 		if (isJobUnique(jobId)) {
 			uniqueStartedJobs.getAndAdd(1);
-			logger.info(
-					"[{}] Started job {}. Number of unique started jobs is {}",
-					serverAgent.getLocalName(),
-					jobId,
+			logger.info("[{}] Started job {}. Number of unique started jobs is {}", serverAgent.getLocalName(), jobId,
 					uniqueStartedJobs);
 		}
 		startedJobsInstances.getAndAdd(1);
-		logger.info(
-				"[{}] Started job instance {}. Number of started job instances is {}",
-				serverAgent.getLocalName(),
-				jobId,
-				startedJobsInstances);
+		logger.info("[{}] Started job instance {}. Number of started job instances is {}", serverAgent.getLocalName(),
+				jobId, startedJobsInstances);
 		updateServerGUI();
 	}
 
@@ -229,20 +264,12 @@ public class ServerStateManagement {
 	public void incrementFinishedJobs(final String jobId) {
 		if (isJobUnique(jobId)) {
 			uniqueFinishedJobs.getAndAdd(1);
-			logger.info(
-					"[{}] Finished job {}. Number of unique finished jobs is {} out of {} started",
-					serverAgent.getLocalName(),
-					jobId,
-					uniqueFinishedJobs,
-					uniqueStartedJobs);
+			logger.info("[{}] Finished job {}. Number of unique finished jobs is {} out of {} started",
+					serverAgent.getLocalName(), jobId, uniqueFinishedJobs, uniqueStartedJobs);
 		}
 		finishedJobsInstances.getAndAdd(1);
-		logger.info(
-				"[{}] Finished job instance {}. Number of finished job instances is {} out of {} started",
-				serverAgent.getLocalName(),
-				jobId,
-				finishedJobsInstances,
-				startedJobsInstances);
+		logger.info("[{}] Finished job instance {}. Number of finished job instances is {} out of {} started",
+				serverAgent.getLocalName(), jobId, finishedJobsInstances, startedJobsInstances);
 		updateServerGUI();
 	}
 
@@ -253,8 +280,7 @@ public class ServerStateManagement {
 	 */
 	public void updateMaximumCapacity(final int newMaximumCapacity) {
 		serverAgent.setCurrentMaximumCapacity(newMaximumCapacity);
-		((ServerAgentNode) serverAgent.getAgentNode())
-				.updateMaximumCapacity(serverAgent.getCurrentMaximumCapacity());
+		((ServerAgentNode) serverAgent.getAgentNode()).updateMaximumCapacity(serverAgent.getCurrentMaximumCapacity());
 	}
 
 	/**
@@ -264,27 +290,16 @@ public class ServerStateManagement {
 	 * @param powerShortageStart time when power shortage starts
 	 */
 	public Job divideJobForPowerShortage(final Job job, final OffsetDateTime powerShortageStart) {
-		if (powerShortageStart.isAfter(job.getStartTime())
-				&& !powerShortageStart.equals(job.getStartTime())) {
-			final Job onBackupEnergyInstance =
-					ImmutableJob.builder()
-							.jobId(job.getJobId())
-							.clientIdentifier(job.getClientIdentifier())
-							.power(job.getPower())
-							.startTime(powerShortageStart)
-							.endTime(job.getEndTime())
-							.build();
-			final Job finishedPowerJobInstance =
-					ImmutableJob.builder()
-							.jobId(job.getJobId())
-							.clientIdentifier(job.getClientIdentifier())
-							.power(job.getPower())
-							.startTime(job.getStartTime())
-							.endTime(powerShortageStart)
-							.build();
+		if (powerShortageStart.isAfter(job.getStartTime()) && !powerShortageStart.equals(job.getStartTime())) {
+			final Job onBackupEnergyInstance = ImmutableJob.builder().jobId(job.getJobId())
+					.clientIdentifier(job.getClientIdentifier()).power(job.getPower()).startTime(powerShortageStart)
+					.endTime(job.getEndTime()).build();
+			final Job finishedPowerJobInstance = ImmutableJob.builder().jobId(job.getJobId())
+					.clientIdentifier(job.getClientIdentifier()).power(job.getPower()).startTime(job.getStartTime())
+					.endTime(powerShortageStart).build();
 			final JobStatusEnum currentJobStatus = serverAgent.getServerJobs().get(job);
 			serverAgent.getServerJobs().remove(job);
-			serverAgent.getServerJobs().put(onBackupEnergyInstance, JobStatusEnum.IN_PROGRESS_BACKUP_ENERGY_TEMPORARY);
+			serverAgent.getServerJobs().put(onBackupEnergyInstance, JobStatusEnum.ON_HOLD_TRANSFER);
 			serverAgent.getServerJobs().put(finishedPowerJobInstance, currentJobStatus);
 			serverAgent.addBehaviour(StartJobExecution.createFor(serverAgent, onBackupEnergyInstance, false, true));
 			if (getCurrentTime().isBefore(finishedPowerJobInstance.getStartTime())) {
@@ -295,7 +310,7 @@ public class ServerStateManagement {
 			}
 			return onBackupEnergyInstance;
 		} else {
-			serverAgent.getServerJobs().replace(job, JobStatusEnum.IN_PROGRESS_BACKUP_ENERGY_TEMPORARY);
+			serverAgent.getServerJobs().replace(job, JobStatusEnum.ON_HOLD_TRANSFER);
 			updateServerGUI();
 			return job;
 		}
@@ -303,14 +318,11 @@ public class ServerStateManagement {
 
 	private List<Job> getUniqueJobsForTimeStamp(final OffsetDateTime startDate, final OffsetDateTime endDate) {
 		return serverAgent.getServerJobs().keySet().stream()
-				.filter(job -> JOB_IN_PROGRESS.contains(serverAgent.getServerJobs().get(job)))
+				.filter(job -> ACCEPTED_JOB_STATUSES.contains(serverAgent.getServerJobs().get(job)))
 				.filter(job -> TimeUtils.isWithinTimeStamp(startDate, endDate, job.getStartTime())
-						|| TimeUtils.isWithinTimeStamp(startDate, endDate, job.getEndTime()))
-				.map(Job::getJobId)
-				.collect(Collectors.toSet()).stream()
-				.collect(Collectors.toMap(jobId -> jobId, this::getJobById))
-				.values().stream()
-				.toList();
+						|| TimeUtils.isWithinTimeStamp(startDate, endDate, job.getEndTime())).map(Job::getJobId)
+				.collect(Collectors.toSet()).stream().collect(Collectors.toMap(jobId -> jobId, this::getJobById))
+				.values().stream().toList();
 	}
 
 	/**
@@ -324,6 +336,7 @@ public class ServerStateManagement {
 		serverAgentNode.updateIsActive(getIsActiveState(), getIsActiveBackUpState());
 		serverAgentNode.updateTraffic(getCurrentPowerInUseForServer());
 		serverAgentNode.updateBackUpTraffic(getCurrentBackUpPowerInUseForServer());
+		serverAgentNode.updateOnHoldJobsCount(getOnHoldJobsCount());
 	}
 
 	/**
@@ -335,15 +348,9 @@ public class ServerStateManagement {
 
 	private int getJobCount() {
 		return serverAgent.getServerJobs().entrySet().stream()
-				.filter(
-						job ->
-								JOB_IN_PROGRESS.contains(job.getValue())
-										&& isWithinTimeStamp(
-										job.getKey().getStartTime(), job.getKey().getEndTime(), getCurrentTime()))
-				.map(Map.Entry::getKey)
-				.map(Job::getJobId)
-				.collect(Collectors.toSet())
-				.size();
+				.filter(job -> ACCEPTED_JOB_STATUSES.contains(job.getValue()) && isWithinTimeStamp(
+						job.getKey().getStartTime(), job.getKey().getEndTime(), getCurrentTime()))
+				.map(Map.Entry::getKey).map(Job::getJobId).collect(Collectors.toSet()).size();
 	}
 
 	private int getClientNumber() {
@@ -352,20 +359,21 @@ public class ServerStateManagement {
 
 	private int getCurrentPowerInUseForServer() {
 		return serverAgent.getServerJobs().entrySet().stream()
-				.filter(job -> job.getValue().equals(JobStatusEnum.IN_PROGRESS)
-						&& isWithinTimeStamp(
-						job.getKey().getStartTime(), job.getKey().getEndTime(), getCurrentTime()))
-				.mapToInt(job -> job.getKey().getPower())
-				.sum();
+				.filter(job -> job.getValue().equals(IN_PROGRESS) && isWithinTimeStamp(job.getKey().getStartTime(),
+						job.getKey().getEndTime(), getCurrentTime())).mapToInt(job -> job.getKey().getPower()).sum();
 	}
 
 	private int getCurrentBackUpPowerInUseForServer() {
 		return serverAgent.getServerJobs().entrySet().stream()
-				.filter(job -> JOB_ON_BACK_UP.contains(job.getValue())
-						&& isWithinTimeStamp(
+				.filter(job -> job.getValue().equals(IN_PROGRESS_BACKUP_ENERGY) && isWithinTimeStamp(
 						job.getKey().getStartTime(), job.getKey().getEndTime(), getCurrentTime()))
-				.mapToInt(job -> job.getKey().getPower())
-				.sum();
+				.mapToInt(job -> job.getKey().getPower()).sum();
+	}
+
+	private int getOnHoldJobsCount() {
+		return serverAgent.getServerJobs().entrySet().stream()
+				.filter(job -> JOB_ON_HOLD.contains(job.getValue()) && isWithinTimeStamp(job.getKey().getStartTime(),
+						job.getKey().getEndTime(), getCurrentTime())).toList().size();
 	}
 
 	private boolean getIsActiveState() {
